--- a/styles/project/_common.scss
+++ b/styles/project/_common.scss
@@ -89,7 +89,7 @@ select::-ms-expand {
   &__cell {
     display: table-cell;
 
-    &.is-longest-amount {
+    &.mod-amount {
       min-width: 90px;  // enough for longest expected amount "-$1000111.00"
     }
   }
